--- a/webapp/src/components/EstateDetailPage/EstateDetail.css
+++ b/webapp/src/components/EstateDetailPage/EstateDetail.css
@@ -1,6 +1,8 @@
-.EstateDetail {
-  overflow-x: hidden;
-  overflow-y: visible;
+@media (max-width: 768px) {
+  .EstateDetail {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 }
 
 .Page > .EstateDetail {
